# frappe_betterprint

./: README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feedback.md  question.md
.github/workflows/: ruff-lint.yml
frappe_betterprint/: __init__.py  browser.py  commands.py  hooks.py  install.py  modules.txt  testscript.py
frappe_betterprint/frappe_betterprint/doctype/betterprint_editor/: betterprint_editor.json  betterprint_editor.py  test_betterprint_editor.py
frappe_betterprint/jinja/: methods.py
frappe_betterprint/pdf_gen/: __init__.py  setup_browser.py  utils.py
frappe_betterprint/pdf_gen/chromium/: __init__.py  browser.py  install.py  page.py  websocket_listener.py
frappe_betterprint/pdf_renderer/: __init__.py  queue.py  renderer.py  server.py  validation.py  worker.py  workerpoolwatcher.py
frappe_betterprint/public/: framedpaged.js  print.js
frappe_betterprint/public/js/: pagedjs.js  paginate.js  print.js
frappe_betterprint/utils/: pdf.py  print.py  server.py
